--- a/source-transform/generic-jakarta-messaging-ra-rar/pom.xml
+++ b/source-transform/generic-jakarta-messaging-ra-rar/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.jboss.genericjms</groupId>
         <artifactId>generic-jakarta-messaging-ra-source-transform-parent</artifactId>
-        <version>2.0.10.Final</version>
+        <version>2.0.11.Final-SNAPSHOT</version>
     </parent>
 	
     
