--- a/source-transform/pom.xml
+++ b/source-transform/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.jboss.genericjms</groupId>
         <artifactId>generic-jms-ra-pom</artifactId>
-        <version>2.0.10.Final</version>
+        <version>2.0.11.Final-SNAPSHOT</version>
     </parent>
 
     <name>JBoss Generic JMS RA Jakarta Namespace Source Transform</name>
