--- a/generic-jms-ra-rar/pom.xml
+++ b/generic-jms-ra-rar/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.jboss.genericjms</groupId>
         <artifactId>generic-jms-ra-pom</artifactId>
-        <version>3.0.0.Beta2-SNAPSHOT</version>
+        <version>3.0.0.Final</version>
     </parent>
 	
     <artifactId>generic-jms-ra</artifactId>
