--- a/generic-jms-ra-jar/pom.xml
+++ b/generic-jms-ra-jar/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.genericjms</groupId>
         <artifactId>generic-jms-ra-pom</artifactId>
-        <version>3.0.0.Final</version>
+        <version>3.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>generic-jms-ra-jar</artifactId>
