Updating the license defintion in the poms
Signed-off-by: Emmanuel Hugonnet <ehugonne@redhat.com>

--- a/generic-jms-ra-jar/pom.xml
+++ b/generic-jms-ra-jar/pom.xml
@@ -19,6 +19,14 @@
 
     <description>JBoss Generic Jakarta Messaging RA classes</description>
 
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <dependencies>
         <dependency>
             <groupId>org.jboss.logging</groupId>
