--- a/generic-jms-ra-rar/pom.xml
+++ b/generic-jms-ra-rar/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.jboss.genericjms</groupId>
         <artifactId>generic-jms-ra-pom</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.1-SNAPSHOT</version>
     </parent>
 	
     <artifactId>generic-jms-ra</artifactId>
