--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>JBoss Generic JMS RA POM</name>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.genericjms</groupId>
-    <version>3.1.0</version>
+    <version>3.1.1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.jboss</groupId>
@@ -30,7 +30,7 @@
         <connection>scm:git:git@github.com:jms-ra/generic-jms-ra.git</connection>
         <developerConnection>scm:git:git@github.com:jms-ra/generic-jms-ra.git</developerConnection>
         <url>https://github.com/jms-ra/generic-jms-ra</url>
-        <tag>generic-jms-ra-3.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <!-- Compile Dependencies -->
