--- a/generic-jms-ra-jar/pom.xml
+++ b/generic-jms-ra-jar/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.jboss.genericjms</groupId>
         <artifactId>generic-jms-ra-pom</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0</version>
     </parent>
 
     <artifactId>generic-jms-ra-jar</artifactId>
